// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`GridContainer Centered should match snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
        "flex": 1,
      },
      {
        "backgroundColor": "white",
      },
    ]
  }
  testID="addon-backgrounds-container"
>
  <View
    style={
      [
        {
          "marginHorizontal": 32,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "marginHorizontal": -8,
            "overflow": "hidden",
          },
          {
            "marginBottom": 16,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "flexBasis": "50%",
            },
            {
              "paddingHorizontal": 8,
            },
            {
              "display": "none",
            },
          ]
        }
      />
      <View
        style={
          [
            {
              "flexBasis": "100%",
            },
            {
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#c5bea9",
              "borderRadius": 8,
              "paddingVertical": 16,
            }
          }
        >
          <Text
            style={
              {
                "textAlign": "center",
              }
            }
          >
            Centered col (view in tablet/desktop mode)
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexBasis": "50%",
            },
            {
              "paddingHorizontal": 8,
            },
            {
              "display": "none",
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`GridContainer Default should match snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
        "flex": 1,
      },
      {
        "backgroundColor": "white",
      },
    ]
  }
  testID="addon-backgrounds-container"
>
  <View
    style={
      [
        {
          "marginHorizontal": 32,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "marginHorizontal": -8,
            "overflow": "hidden",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "flexBasis": "50%",
            },
            {
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#c5bea9",
              "borderRadius": 8,
              "paddingVertical": 16,
            }
          }
        >
          <Text>
            Column 1
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexBasis": "50%",
            },
            {
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#c5bea9",
              "borderRadius": 8,
              "paddingVertical": 16,
            }
          }
        >
          <Text>
            Column 2
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`GridContainer Elevated should match snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
        "flex": 1,
      },
      {
        "backgroundColor": "white",
      },
    ]
  }
  testID="addon-backgrounds-container"
>
  <View
    style={
      [
        {
          "marginHorizontal": 8,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "marginHorizontal": 0,
            "overflow": "scroll",
          },
          {
            "marginBottom": 16,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "flexBasis": "50%",
            },
            {
              "marginRight": -16,
              "paddingLeft": 0,
              "paddingRight": 32,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#c5bea9",
              "borderRadius": 8,
              "paddingVertical": 16,
            }
          }
        >
          <Text>
            Useful for carousel like effect
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexBasis": "50%",
            },
            {
              "marginRight": -16,
              "paddingLeft": 0,
              "paddingRight": 32,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#c5bea9",
              "borderRadius": 8,
              "paddingVertical": 16,
            }
          }
        >
          <Text>
            Column 2
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexBasis": "50%",
            },
            {
              "marginRight": -16,
              "paddingLeft": 0,
              "paddingRight": 32,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#c5bea9",
              "borderRadius": 8,
              "paddingVertical": 16,
            }
          }
        >
          <Text>
            Column 3
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        [
          {
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "marginHorizontal": 0,
            "overflow": "scroll",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "flexBasis": "100%",
            },
            {
              "paddingLeft": 0,
              "paddingRight": 0,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#c5bea9",
              "borderRadius": 8,
              "paddingVertical": 16,
            }
          }
        >
          <Text
            style={
              {
                "textAlign": "center",
              }
            }
          >
            Full width
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`GridContainer GridModesMixed should match snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
        "flex": 1,
      },
      {
        "backgroundColor": "white",
      },
    ]
  }
  testID="addon-backgrounds-container"
>
  <View
    style={
      [
        {
          "marginHorizontal": 32,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "marginHorizontal": -8,
            "overflow": "hidden",
          },
          {
            "marginBottom": 16,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "flexBasis": "50%",
            },
            {
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View>
          <Text>
            Normal grid - text is aligned with elevated
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexBasis": "50%",
            },
            {
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View>
          <Text>
            Normal grid
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "marginHorizontal": 8,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "marginHorizontal": 0,
            "overflow": "hidden",
          },
          {
            "marginBottom": 16,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "flexBasis": "50%",
            },
            {
              "marginRight": -16,
              "paddingLeft": 0,
              "paddingRight": 32,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "backgroundColor": "#c5bea9",
                "borderRadius": 8,
                "paddingVertical": 16,
              },
              {
                "paddingHorizontal": 24,
              },
            ]
          }
        >
          <Text>
            Elevated grid columns
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexBasis": "50%",
            },
            {
              "marginRight": -16,
              "paddingLeft": 0,
              "paddingRight": 32,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "backgroundColor": "#c5bea9",
                "borderRadius": 8,
                "paddingVertical": 16,
              },
              {
                "paddingHorizontal": 24,
              },
            ]
          }
        >
          <Text>
            Works well with carousel
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "marginHorizontal": 8,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "marginHorizontal": 0,
            "overflow": "hidden",
          },
          {
            "marginBottom": 16,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "flexBasis": "100%",
            },
            {
              "paddingLeft": 0,
              "paddingRight": 0,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "backgroundColor": "#c5bea9",
                "borderRadius": 8,
                "paddingVertical": 16,
              },
              {
                "paddingHorizontal": 24,
              },
            ]
          }
        >
          <Text
            style={
              {
                "textAlign": "center",
              }
            }
          >
            Elevated grid single columns
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "marginHorizontal": 32,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "marginHorizontal": -8,
            "overflow": "hidden",
          },
          {
            "marginBottom": 16,
          },
        ]
      }
    >
      <View
        style={
          [
            {
              "flexBasis": "50%",
            },
            {
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View>
          <Text>
            Normal grid
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexBasis": "50%",
            },
            {
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View>
          <Text>
            Normal grid
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "marginHorizontal": 8,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "marginHorizontal": 0,
            "overflow": "hidden",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "flexBasis": "50%",
            },
            {
              "marginRight": -16,
              "paddingLeft": 0,
              "paddingRight": 32,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "backgroundColor": "#c5bea9",
                "borderRadius": 8,
                "paddingVertical": 16,
              },
              {
                "paddingHorizontal": 24,
              },
            ]
          }
        >
          <Text>
            Elevated grid columns
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexBasis": "50%",
            },
            {
              "marginRight": -16,
              "paddingLeft": 0,
              "paddingRight": 32,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "backgroundColor": "#c5bea9",
                "borderRadius": 8,
                "paddingVertical": 16,
              },
              {
                "paddingHorizontal": 24,
              },
            ]
          }
        >
          <Text>
            Elevated grid columns
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`GridContainer MultipleRows should match snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
        "flex": 1,
      },
      {
        "backgroundColor": "white",
      },
    ]
  }
  testID="addon-backgrounds-container"
>
  <View
    style={
      [
        {
          "marginHorizontal": 32,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "marginHorizontal": -8,
            "overflow": "hidden",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "flexBasis": "50%",
            },
            {
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "backgroundColor": "#c5bea9",
                "borderRadius": 8,
                "paddingVertical": 16,
              },
              {
                "marginBottom": 16,
              },
            ]
          }
        >
          <Text>
            Row 1, Col 1
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexBasis": "50%",
            },
            {
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "backgroundColor": "#c5bea9",
                "borderRadius": 8,
                "paddingVertical": 16,
              },
              {
                "marginBottom": 16,
              },
            ]
          }
        >
          <Text>
            Row 1, Col 2
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        [
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "marginHorizontal": -8,
            "overflow": "hidden",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "flexBasis": "50%",
            },
            {
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "backgroundColor": "#c5bea9",
                "borderRadius": 8,
                "paddingVertical": 16,
              },
              {
                "marginBottom": 16,
              },
            ]
          }
        >
          <Text>
            Row 2, Col 1
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexBasis": "50%",
            },
            {
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "backgroundColor": "#c5bea9",
                "borderRadius": 8,
                "paddingVertical": 16,
              },
              {
                "marginBottom": 16,
              },
            ]
          }
        >
          <Text>
            Row 2, Col 2
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        [
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "marginHorizontal": -8,
            "overflow": "hidden",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "flexBasis": "50%",
            },
            {
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#c5bea9",
              "borderRadius": 8,
              "paddingVertical": 16,
            }
          }
        >
          <Text>
            Row 3, Col 1
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexBasis": "50%",
            },
            {
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#c5bea9",
              "borderRadius": 8,
              "paddingVertical": 16,
            }
          }
        >
          <Text>
            Row 3, Col 2
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`GridContainer NoWrap should match snapshot 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "transparent",
        "flex": 1,
      },
      {
        "backgroundColor": "white",
      },
    ]
  }
  testID="addon-backgrounds-container"
>
  <View
    style={
      [
        {
          "marginHorizontal": 32,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "marginHorizontal": -8,
            "overflow": "scroll",
          },
          undefined,
        ]
      }
    >
      <View
        style={
          [
            {
              "flexBasis": "50%",
            },
            {
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#c5bea9",
              "borderRadius": 8,
              "paddingVertical": 16,
            }
          }
        >
          <Text>
            Column 1
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexBasis": "50%",
            },
            {
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#c5bea9",
              "borderRadius": 8,
              "paddingVertical": 16,
            }
          }
        >
          <Text>
            Column 2
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexBasis": "50%",
            },
            {
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#c5bea9",
              "borderRadius": 8,
              "paddingVertical": 16,
            }
          }
        >
          <Text>
            Column 3
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexBasis": "50%",
            },
            {
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#c5bea9",
              "borderRadius": 8,
              "paddingVertical": 16,
            }
          }
        >
          <Text>
            Column 4
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexBasis": "50%",
            },
            {
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#c5bea9",
              "borderRadius": 8,
              "paddingVertical": 16,
            }
          }
        >
          <Text>
            Column 5
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "flexBasis": "50%",
            },
            {
              "paddingHorizontal": 8,
            },
            undefined,
          ]
        }
      >
        <View
          style={
            {
              "backgroundColor": "#c5bea9",
              "borderRadius": 8,
              "paddingVertical": 16,
            }
          }
        >
          <Text>
            Column 6
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
